--- a/src/screens/Login/index.module.css
+++ b/src/screens/Login/index.module.css
@@ -1,4 +1,4 @@
-div {
+.main {
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,14 +7,69 @@ div {
     flex-direction: column;
 }
 
-h1 {
+.square {
+    height: 400px;
+    width: 400px;
+    background-color: #575583;
+    border: 1px solid white;
+    border-radius: 30px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    overflow: auto;
+}
+
+.form-box {
+    height: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.header {
     color: white;
+    margin-left: 30px;
 }
 
 label {
     color: white;
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+input {
+    width: 100%;
+    border: 0;
+    padding: 0;
+    padding-left: 5px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+#username {
+    margin-top: 50px;
+}
+
+.enter-text {
+    height: 20px;
+    border-radius: 3px;
+    margin-top: 5px;
+}
+
+.submit-button {
+    margin-top: 20px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: #4da9ff;
+    font-size: 16px;
+}
+
+.submit-button:hover {
+    background-color: #80c1ff;
 }
 
 p {
     color:white;
+    margin-left: 30px;
 }
