--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,19 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
+  /* Declaracion de colores */
+  --main-bg-color: #161539;
+  --button-blue: #4da9ff;
+  --button-blue-hover: #80c1ff;
+  --bg-purple: #575583;
+
 }
 
 .main-div {
   width: 100vw;
   height: 100vh;
-  background-color: #161539;
+  background-color: var(--main-bg-color);
   margin: 0;
   display:flex;
 }
