--- a/src/screens/Login/index.module.css
+++ b/src/screens/Login/index.module.css
@@ -1,4 +1,13 @@
-.main {
+/* GENERAL */
+
+.side-margin {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+/* DIVS */
+
+.main-div {
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,28 +16,39 @@
     flex-direction: column;
 }
 
-.square {
+.square-box {
     height: 400px;
     width: 400px;
-    background-color: #575583;
+    background-color: var(--bg-purple);
     border: 1px solid white;
     border-radius: 30px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    overflow: auto;
 }
 
 .form-box {
     height: 200px;
-    margin-left: 30px;
-    margin-right: 30px;
     display: flex;
     flex-direction: column;
 }
 
+/* BUTTONS */
+
+.submit-button {
+    margin-top: 20px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: var(--button-blue);
+    font-size: 16px;
+}
+
+.submit-button:hover {
+    background-color: var(--button-blue-hover);
+}
+
+/* TEXT */
 
 .header {
     color: white;
-    margin-left: 30px;
 }
 
 label {
@@ -47,29 +67,12 @@ input {
     -moz-box-sizing: border-box;
 }
 
-#username {
-    margin-top: 50px;
-}
-
 .enter-text {
     height: 20px;
     border-radius: 3px;
     margin-top: 5px;
 }
 
-.submit-button {
-    margin-top: 20px;
-    height: 30px;
-    border-radius: 3px;
-    background-color: #4da9ff;
-    font-size: 16px;
-}
-
-.submit-button:hover {
-    background-color: #80c1ff;
-}
-
 p {
     color:white;
-    margin-left: 30px;
 }
