Crear página de perfil y popup de Editar perfil

--- a/src/screens/Login/index.module.css
+++ b/src/screens/Login/index.module.css
@@ -65,13 +65,13 @@
     color: white;
 }
 
-label {
+.labels {
     color: white;
     margin-top: 10px;
     font-size: 16px;
 }
 
-input {
+.inputs {
     width: 100%;
     border: 0;
     padding: 0;
