--- a/src/components/ProfilePopUp/index.module.css
+++ b/src/components/ProfilePopUp/index.module.css
@@ -43,3 +43,10 @@
 .button:hover {
     background: var(--button-blue-hover);
 }
+
+.counter {
+    height: 30px;
+    margin: 0;
+    justify-self: flex-end;
+    margin-right: 5px;
+}
