Añadir barra de navegación

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   --button-blue: #4da9ff;
   --button-blue-hover: #80c1ff;
   --bg-purple: #575583;
+  --top-bar-color: #25225d;
+  --top-bar-hover: #817dcf;
+  --darker-top-bar-color: #161538;
 
 }
 
