--- a/src/screens/ProfilePage/index.module.css
+++ b/src/screens/ProfilePage/index.module.css
@@ -1,8 +1,17 @@
 /* DIVS */
 
-.main {
+.all {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main {
+    width: 100%;
+    height: calc(100% - 80px);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -21,7 +30,7 @@
 }
 
 .left {
-    height: 100vh;
+    height: 100%;
     width: 450px;
     display: flex;
     justify-content: center;
@@ -35,7 +44,7 @@
 }
 
 .right {
-    height: 100vh;
+    height: 100%;
     width: calc(100% - 450px);
 }
 
